# discord-ladder-bot

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  go.mod  go.sum
cmd/main/: main.go
internal/discordbot/: discordbot.go  discordbot_handlers.go
internal/rankingdata/: rankingdata.go  rankingdata_test.go
internal/version/: version.go
pkg/config/: config.go
pkg/discordbot/: discordbot.go
pkg/rankingdata/: rankingdata.go  rankingdata_test.go
src/: config.rs  discordbot.rs  main.rs
