[package]
name = "discord-ladder-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
mongodb = "2.7.0"
poise = "0.5.6"
serde = "1.0.188"
serde_yaml = "0.9.25"
signal-hook = "0.3.17"
tokio = "1.32.0"
